# docs

./: .gitignore  README.md  mkdocs.yml
.github/workflows/: mkdocs.yml
docs/: getting-started.md  index.md
docs/css/: extra.css
docs/generative-media/: index.md
docs/meai/: aifunction-tools.md  chat-client.md  custom-providers.md  embedding-generator.md  index.md  namespace-conflict.md  speech-to-text.md
docs/realtime-avatars/: index.md
docs/sdks/: index.md
theme/: README.md  pyproject.toml
theme/src/tryagi_mkdocs_theme/: __init__.py  main.html  mkdocs_theme.yml
theme/src/tryagi_mkdocs_theme.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
theme/src/tryagi_mkdocs_theme/assets/stylesheets/: tryagi.css
theme/src/tryagi_mkdocs_theme/partials/: logo.html
