[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tryagi-mkdocs-theme"
version = "0.1.0"
description = "Shared MkDocs theme for tryAGI SDK documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mkdocs-material>=9.7.0"]

[project.entry-points."mkdocs.themes"]
tryagi = "tryagi_mkdocs_theme"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tryagi_mkdocs_theme = [
  "mkdocs_theme.yml",
  "main.html",
  "partials/*.html",
  "assets/stylesheets/*.css",
]
